# rest-framework

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  checklog-odoo.cfg  requirements.txt  test-requirements.txt
.github/workflows/: test.yml
api_log/: README.rst  __manifest__.py
api_log/i18n/: api_log.pot  it.po
api_log/models/: api_log_collection.py
api_log/security/: res_groups.xml
api_log/tests/: test_api_log.py
api_log/views/: api_log_views.xml
api_log_mail/: README.rst  __manifest__.py
api_log_mail/i18n/: api_log_mail.pot  it.po
api_log_mail/models/: api_log.py
auth_partner/: README.rst  __manifest__.py
auth_partner/data/: email_data.xml
auth_partner/i18n/: it.po  (+1 more)
base_rest/: README.rst  __manifest__.py  http.py  restapi.py
base_rest_auth_api_key/: README.rst  __manifest__.py
base_rest_pydantic/: README.rst  __manifest__.py  restapi.py
extendable/: README.rst  __manifest__.py
extendable_fastapi/: README.rst  __manifest__.py
fastapi/: README.rst  __init__.py  __manifest__.py  dependencies.py  error_handlers.py  fastapi_dispatcher.py  middleware.py  patch.py
fastapi_auth_api_key/: README.rst  dependencies.py
fastapi_auth_jwt/: README.rst  dependencies.py
fastapi_auth_partner/: README.rst  __manifest__.py  dependencies.py
fastapi_captcha/: README.rst  __manifest__.py  captcha_middleware.py
fastapi_captcha_altcha_backend/: README.rst  __manifest__.py  schemas.py
fastapi_endpoint_context/: README.rst  __manifest__.py
fastapi_log/: README.rst  __manifest__.py  fastapi_dispatcher.py
fastapi_log_mail/: README.rst  __manifest__.py
graphql_base/: README.rst  __manifest__.py
pydantic/: README.rst  __manifest__.py  utils.py
rest_log/: README.rst  __manifest__.py  hooks.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+116 files in other folders)
