[project]
name = "odoo-addons-oca-rest-framework"
version = "17.0.20251021.0"
dependencies = [
    "odoo-addon-fastapi>=17.0dev,<17.1dev",
    "odoo-addon-fastapi_auth_api_key>=17.0dev,<17.1dev",
    "odoo-addon-graphql_base>=17.0dev,<17.1dev",
    "odoo-addon-graphql_demo>=17.0dev,<17.1dev",
    "odoo-addon-pydantic>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
